--- a/cli-notify/source/stylesheets/all.css
+++ b/cli-notify/source/stylesheets/all.css
@@ -11,6 +11,11 @@ body {
   overflow: hidden;
 }
 
+.app-container {
+  width: 100%;
+  height: 100%;
+}
+
 h1 {
   position: absolute;
   color: rgba(0, 0, 0, .3);
