cli-notify: Adding a server mode using the --server flag and allowing JSON to be passed to send notifications.

--- a/cli-notify/source/layouts/layout.erb
+++ b/cli-notify/source/layouts/layout.erb
@@ -11,7 +11,8 @@
 
     <%= stylesheet_link_tag "normalize", "all" %>
 
-    <%= partial "templates/application" %>
+    <%= partial "templates/application"   %>
+    <%= partial "templates/notification"  %>
   </head>
 
   <body class="<%= page_classes %>">
